# SFML-proj

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/forces/: freeFall.cpp  inclined_plane.cpp
